--- a/surelink-vue/public/index.html
+++ b/surelink-vue/public/index.html
@@ -4,9 +4,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="title" content="SureLink - Safe short url for humans" />
+    <meta name="description" content="URL shortener that puts your safety first! With surelink, you'll always know exactly where a short URL will take you before you click on it. This means you can make informed decisions about whether or not to follow the link." />
+    <meta name="keywords" content="url shortener free, bitly url shortener, google short url, tinyurl generator, url shorten" />
+    <meta property="og:title" content="SureLink - Safe short url for humans" />
+    <meta property="og:description" content="URL shortener that puts your safety first! With surelink, you'll always know exactly where a short URL will take you before you click on it. This means you can make informed decisions about whether or not to follow the link." />
+    <meta property="og:image" content="https://surel.ink/img/logo.b4c96294.svg" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>SureLink</title>
+    <title>SureLink - Safe short url for humans</title>
   </head>
+
+  <!-- START Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZS3JBK1HYE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-ZS3JBK1HYE');
+  </script>
+  <!-- END Google tag (gtag.js) -->
+
+
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
