implement recaptcha on HomeItem.vue

--- a/surelink-vue/public/index.html
+++ b/surelink-vue/public/index.html
@@ -23,6 +23,7 @@
 
     gtag('config', 'G-ZS3JBK1HYE');
   </script>
+  <script src="https://www.google.com/recaptcha/api.js?render=6LcPjUMmAAAAAEOc7hMHqPMCRTisgzCy68jzUUcF"></script>
   <!-- END Google tag (gtag.js) -->
 
 
